# jira-python

./: README.md  pyproject.toml  setup.py
jira/: client.py
